--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: white;
+  background: #ffff;
 }
 
 /* Handle */
@@ -146,9 +146,10 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-  .swiper-button-prev {
+.swiper-button-prev {
     display: none;
   }
+
   .swiper-pagination {
     display: block;
   }
@@ -169,6 +170,7 @@ a {
   .popularSwiper .swiper-pagination {
     bottom: 0px;
   }
+
   .popularSwiper .swiper-slide {
     width: 320px;
     margin-left: 20px;
@@ -189,6 +191,7 @@ a {
   .categoriesSwiper .swiper-pagination {
     bottom: 0px;
   }
+
   .categoriesSwiper .swiper-slide {
     width: 320px;
     margin-left: 20px;
@@ -199,10 +202,12 @@ a {
     width: 190px;
     margin-left: 15px;
   }
+
   .swiperPartners .swiper-slide {
     width: 190px;
     margin-left: 15px;
   }
+
   .swiperPartners {
     margin-left: -16px;
     width: calc(100% + 32px);
@@ -211,15 +216,18 @@ a {
   .swiperPartners .swiper-pagination {
     bottom: 0px;
   }
+
   .infoSwiper {
     padding-bottom: 30px;
   }
   .infoSwiper .swiper-pagination {
     bottom: 0px;
   }
+
   .bg-none {
     background: none !important;
   }
+
   #tab-login, #tab-register {
     font-size: 20px !important;
     padding: 12px !important;
@@ -231,8 +239,10 @@ a {
 }
 
 .custom-scrollbar {
-  -ms-overflow-style: none; /* IE и Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE и Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .bg {
@@ -280,7 +290,7 @@ input:checked + .slider-v3::after {
   left: 50%;
   bottom: 20px;
   transform: translateX(-50%);
-  background: rgba(232, 232, 232, 0.5019607843);
+  background: #E8E8E880;
   height: 20px;
   width: auto;
   border-radius: 20px;
