--- a/css/output.css
+++ b/css/output.css
@@ -1204,6 +1204,10 @@ select{
   border-width: 0;
 }
 
+.pointer-events-none{
+  pointer-events: none;
+}
+
 .static{
   position: static;
 }
@@ -1222,6 +1226,10 @@ select{
 
 .sticky{
   position: sticky;
+}
+
+.inset-0{
+  inset: 0px;
 }
 
 .\!bottom-6{
@@ -1368,6 +1376,54 @@ select{
   top: calc(100% + 6px);
 }
 
+.top-\[14px\]{
+  top: 14px;
+}
+
+.top-\[-14px\]{
+  top: -14px;
+}
+
+.top-\[-11px\]{
+  top: -11px;
+}
+
+.right-3{
+  right: 0.75rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
+.bottom-2{
+  bottom: 0.5rem;
+}
+
+.bottom-\[-50px\]{
+  bottom: -50px;
+}
+
+.right-\[-50px\]{
+  right: -50px;
+}
+
+.bottom-\[-150px\]{
+  bottom: -150px;
+}
+
+.right-\[-150px\]{
+  right: -150px;
+}
+
+.bottom-\[-100px\]{
+  bottom: -100px;
+}
+
+.right-\[-100px\]{
+  right: -100px;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -1392,6 +1448,18 @@ select{
   z-index: 100;
 }
 
+.z-50{
+  z-index: 50;
+}
+
+.order-2{
+  order: 2;
+}
+
+.order-1{
+  order: 1;
+}
+
 .col-span-12{
   grid-column: span 12 / span 12;
 }
@@ -1412,10 +1480,6 @@ select{
   grid-column: span 5 / span 5;
 }
 
-.col-span-6{
-  grid-column: span 6 / span 6;
-}
-
 .col-span-7{
   grid-column: span 7 / span 7;
 }
@@ -1426,6 +1490,10 @@ select{
 
 .col-span-9{
   grid-column: span 9 / span 9;
+}
+
+.col-span-6{
+  grid-column: span 6 / span 6;
 }
 
 .m-\[auto\]{
@@ -1469,6 +1537,11 @@ select{
 .my-0{
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-\[10px\]{
@@ -1827,6 +1900,22 @@ select{
   margin-top: auto;
 }
 
+.mt-\[-50px\]{
+  margin-top: -50px;
+}
+
+.mt-\[-80px\]{
+  margin-top: -80px;
+}
+
+.mt-\[-75px\]{
+  margin-top: -75px;
+}
+
+.mb-\[49px\]{
+  margin-bottom: 49px;
+}
+
 .block{
   display: block;
 }
@@ -1877,6 +1966,10 @@ select{
 
 .h-\[100\%\]{
   height: 100%;
+}
+
+.h-\[100dvh\]{
+  height: 100dvh;
 }
 
 .h-\[100px\]{
@@ -2043,6 +2136,10 @@ select{
   height: 72px;
 }
 
+.h-\[73px\]{
+  height: 73px;
+}
+
 .h-\[740px\]{
   height: 740px;
 }
@@ -2075,8 +2172,20 @@ select{
   height: 100%;
 }
 
+.h-\[90px\]{
+  height: 90px;
+}
+
+.h-\[460px\]{
+  height: 460px;
+}
+
 .max-h-\[100\%\]{
   max-height: 100%;
+}
+
+.max-h-80{
+  max-height: 20rem;
 }
 
 .min-h-\[420px\]{
@@ -2149,10 +2258,6 @@ select{
 
 .w-\[300px\]{
   width: 300px;
-}
-
-.w-\[320px\]{
-  width: 320px;
 }
 
 .w-\[32px\]{
@@ -2239,6 +2344,10 @@ select{
   width: 100%;
 }
 
+.w-24{
+  width: 6rem;
+}
+
 .min-w-10{
   min-width: 2.5rem;
 }
@@ -2277,10 +2386,6 @@ select{
 
 .min-w-\[264px\]{
   min-width: 264px;
-}
-
-.min-w-\[320px\]{
-  min-width: 320px;
 }
 
 .min-w-\[4px\]{
@@ -2411,6 +2516,14 @@ select{
   max-width: 840px;
 }
 
+.max-w-\[456px\]{
+  max-width: 456px;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -2429,6 +2542,11 @@ select{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-180{
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2436,6 +2554,16 @@ select{
 
 .rotate-\[-90deg\]{
   --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-45deg\]{
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[90deg\]{
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2449,6 +2577,12 @@ select{
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.select-none{
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .resize-none{
@@ -2611,6 +2745,12 @@ select{
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .self-start{
   align-self: flex-start;
 }
@@ -2697,6 +2837,14 @@ select{
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border{
@@ -2952,6 +3100,24 @@ select{
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-black\/60{
+  background-color: rgb(50 50 50 / 0.6);
+}
+
+.bg-black\/40{
+  background-color: rgb(50 50 50 / 0.4);
+}
+
+.bg-\[\#49A6FF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(73 166 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#C94225\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(201 66 37 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
   background-image: linear-gradient(101deg, #587AFF -5.69%, #7144F5 44.08%, #D426FF 111.99%);
 }
@@ -3172,6 +3338,10 @@ select{
   padding-bottom: 70px;
 }
 
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -3268,12 +3438,16 @@ select{
   padding-top: 80px;
 }
 
-.pl-10{
-  padding-left: 2.5rem;
+.pr-10{
+  padding-right: 2.5rem;
 }
 
-.pl-9{
-  padding-left: 2.25rem;
+.pr-2{
+  padding-right: 0.5rem;
+}
+
+.pr-\[100px\]{
+  padding-right: 100px;
 }
 
 .text-center{
@@ -3361,6 +3535,16 @@ select{
   line-height: 1.25rem;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -3423,6 +3607,14 @@ select{
 
 .leading-\[120\%\]{
   line-height: 120%;
+}
+
+.leading-snug{
+  line-height: 1.375;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .tracking-\[-0\.16px\]{
@@ -3519,6 +3711,14 @@ select{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-white\/80{
+  color: rgb(255 255 255 / 0.8);
+}
+
+.text-white\/90{
+  color: rgb(255 255 255 / 0.9);
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -3545,6 +3745,11 @@ select{
 
 .outline-\[\#F4F4F4\]{
   outline-color: #F4F4F4;
+}
+
+.brightness-\[2\.5\]{
+  --tw-brightness: brightness(2.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-\[7\.5px\]{
@@ -3591,6 +3796,20 @@ select{
   .md\:flex-js-c{
     display: flex;
     justify-content: flex-start;
+    align-items: center;
+  }
+
+  .md\:flex-je-s{
+    display: flex;
+    justify-content: end;
+    align-items: start;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:flex-jsb-c{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -3656,17 +3875,22 @@ select{
   background-color: rgb(0 159 255 / 0.8);
 }
 
-.hover\:bg-blue\/90:hover{
-  background-color: rgb(0 159 255 / 0.9);
-}
-
 .hover\:bg-white\/80:hover{
   background-color: rgb(255 255 255 / 0.8);
+}
+
+.hover\:bg-\[\#a7341a\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 52 26 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-\[\#fff\]:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:underline:hover{
+  text-decoration-line: underline;
 }
 
 .hover\:opacity-100:hover{
@@ -3685,6 +3909,12 @@ select{
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .group:hover .group-hover\:scale-\[1\.05\]{
@@ -3783,10 +4013,6 @@ select{
 }
 
 @media (max-width: 1300px){
-  .max-\[1300px\]\:top-\[-100px\]{
-    top: -100px;
-  }
-
   .max-\[1300px\]\:mb-\[12px\]{
     margin-bottom: 12px;
   }
@@ -3845,10 +4071,6 @@ select{
     position: static;
   }
 
-  .max-\[1024px\]\:col-span-9{
-    grid-column: span 9 / span 9;
-  }
-
   .max-\[1024px\]\:col-span-12{
     grid-column: span 12 / span 12;
   }
@@ -3891,10 +4113,6 @@ select{
 
   .max-\[1024px\]\:mt-\[auto\]{
     margin-top: auto;
-  }
-
-  .max-\[1024px\]\:mb-\[100px\]{
-    margin-bottom: 100px;
   }
 
   .max-\[1024px\]\:block{
@@ -4039,16 +4257,12 @@ select{
     right: 15px;
   }
 
-  .max-\[767px\]\:bottom-\[0\]{
-    bottom: 0;
+  .max-\[767px\]\:bottom-\[10px\]{
+    bottom: 10px;
   }
 
   .max-\[767px\]\:left-\[0\]{
     left: 0;
-  }
-
-  .max-\[767px\]\:bottom-\[10px\]{
-    bottom: 10px;
   }
 
   .max-\[767px\]\:col-span-12{
@@ -4189,10 +4403,6 @@ select{
     gap: 10px;
   }
 
-  .max-\[767px\]\:gap-\[12px\]{
-    gap: 12px;
-  }
-
   .max-\[767px\]\:overflow-x-auto{
     overflow-x: auto;
   }
@@ -4233,10 +4443,6 @@ select{
     padding: 20px;
   }
 
-  .max-\[767px\]\:p-\[15px\]{
-    padding: 15px;
-  }
-
   .max-\[767px\]\:px-\[16px\]{
     padding-left: 16px;
     padding-right: 16px;
@@ -4272,14 +4478,6 @@ select{
 
   .max-\[767px\]\:pb-\[20px\]{
     padding-bottom: 20px;
-  }
-
-  .max-\[767px\]\:pb-\[30px\]{
-    padding-bottom: 30px;
-  }
-
-  .max-\[767px\]\:pb-\[40px\]{
-    padding-bottom: 40px;
   }
 
   .max-\[767px\]\:text-left{
@@ -4390,6 +4588,14 @@ select{
 }
 
 @media (min-width: 640px){
+  .sm\:top-\[-17px\]{
+    top: -17px;
+  }
+
+  .sm\:order-1{
+    order: 1;
+  }
+
   .sm\:mt-0{
     margin-top: 0px;
   }
@@ -4404,6 +4610,10 @@ select{
 
   .sm\:flex{
     display: flex;
+  }
+
+  .sm\:grid{
+    display: grid;
   }
 
   .sm\:hidden{
@@ -4430,6 +4640,22 @@ select{
     width: 45px;
   }
 
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .sm\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .sm\:pr-\[100px\]{
+    padding-right: 100px;
+  }
+
   .sm\:text-\[28px\]{
     font-size: 28px;
   }
@@ -4437,11 +4663,27 @@ select{
   .sm\:text-\[32px\]{
     font-size: 32px;
   }
+
+  .sm\:text-\[20px\]{
+    font-size: 20px;
+  }
+
+  .sm\:text-\[18px\]{
+    font-size: 18px;
+  }
+
+  .sm\:text-\[64px\]{
+    font-size: 64px;
+  }
+
+  .sm\:text-\[44px\]{
+    font-size: 44px;
+  }
 }
 
 @media (min-width: 768px){
-  .md\:col-span-3{
-    grid-column: span 3 / span 3;
+  .md\:relative{
+    position: relative;
   }
 
   .md\:col-span-5{
@@ -4450,6 +4692,10 @@ select{
 
   .md\:col-span-7{
     grid-column: span 7 / span 7;
+  }
+
+  .md\:col-span-3{
+    grid-column: span 3 / span 3;
   }
 
   .md\:col-span-2{
@@ -4468,21 +4714,77 @@ select{
     margin-top: 70px;
   }
 
+  .md\:mb-\[30px\]{
+    margin-bottom: 30px;
+  }
+
+  .md\:mb-\[49px\]{
+    margin-bottom: 49px;
+  }
+
+  .md\:mt-\[-75px\]{
+    margin-top: -75px;
+  }
+
+  .md\:block{
+    display: block;
+  }
+
+  .md\:inline{
+    display: inline;
+  }
+
+  .md\:hidden{
+    display: none;
+  }
+
+  .md\:h-auto{
+    height: auto;
+  }
+
+  .md\:w-\[320px\]{
+    width: 320px;
+  }
+
+  .md\:w-32{
+    width: 8rem;
+  }
+
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:w-\[60\%\]{
+    width: 60%;
+  }
+
+  .md\:min-w-\[320px\]{
+    min-width: 320px;
+  }
+
+  .md\:max-w-2xl{
+    max-width: 42rem;
+  }
+
+  .md\:max-w-\[854px\]{
+    max-width: 854px;
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-1{
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:p-10{
+    padding: 2.5rem;
   }
 
   .md\:px-\[95px\]{
     padding-left: 95px;
     padding-right: 95px;
-  }
-
-  .md\:pl-0{
-    padding-left: 0px;
   }
 
   .md\:text-\[32px\]{
@@ -4491,6 +4793,20 @@ select{
 
   .md\:text-\[60px\]{
     font-size: 60px;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-\[64px\]{
+    font-size: 64px;
   }
 
   .md\:leading-\[60px\]{
@@ -4505,6 +4821,12 @@ select{
 
   .min-\[850px\]\:hidden{
     display: none;
+  }
+}
+
+@media (min-width: 870px){
+  .min-\[870px\]\:max-w-\[854px\]{
+    max-width: 854px;
   }
 }
 
@@ -4537,6 +4859,18 @@ select{
   }
 }
 
+@media (min-width: 970px){
+  .min-\[970px\]\:block{
+    display: block;
+  }
+}
+
+@media (min-width: 1000px){
+  .min-\[1000px\]\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 1024px){
   .lg\:col-span-5{
     grid-column: span 5 / span 5;
@@ -4546,8 +4880,16 @@ select{
     grid-column: span 7 / span 7;
   }
 
+  .lg\:col-span-9{
+    grid-column: span 9 / span 9;
+  }
+
   .lg\:block{
     display: block;
+  }
+
+  .lg\:flex{
+    display: flex;
   }
 
   .lg\:max-w-\[670px\]{
@@ -4577,6 +4919,10 @@ select{
   .min-\[1200px\]\:hidden{
     display: none;
   }
+
+  .min-\[1200px\]\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 1250px){
@@ -4592,6 +4938,50 @@ select{
 }
 
 @media (min-width: 1280px){
+  .xl\:order-1{
+    order: 1;
+  }
+
+  .xl\:order-2{
+    order: 2;
+  }
+
+  .xl\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .xl\:mt-\[-90px\]{
+    margin-top: -90px;
+  }
+
+  .xl\:block{
+    display: block;
+  }
+
+  .xl\:hidden{
+    display: none;
+  }
+
+  .xl\:h-\[869px\]{
+    height: 869px;
+  }
+
+  .xl\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .xl\:flex-row{
+    flex-direction: row;
+  }
+
   .xl\:text-\[85px\]{
     font-size: 85px;
   }
@@ -4646,6 +5036,22 @@ select{
 @media (min-width: 1500px){
   .min-\[1500px\]\:flex-row{
     flex-direction: row;
+  }
+}
+
+@media (min-width: 1536px){
+  .\32xl\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .\32xl\:gap-10{
+    gap: 2.5rem;
+  }
+}
+
+@media (min-width: 1600px){
+  .min-\[1600px\]\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
