--- a/css/output.css
+++ b/css/output.css
@@ -21,7 +21,7 @@
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: #ffff;
+  background: white;
 }
 
 /* Handle */
@@ -165,7 +165,7 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-.swiper-button-prev {
+  .swiper-button-prev {
     display: none;
   }
 
@@ -319,7 +319,7 @@ input:checked + .slider-v3::after {
   left: 50%;
   bottom: 20px;
   transform: translateX(-50%);
-  background: #E8E8E880;
+  background: rgba(232, 232, 232, 0.5019607843);
   height: 20px;
   width: auto;
   border-radius: 20px;
@@ -353,6 +353,20 @@ input:checked + .slider-v3::after {
 .swiper-pagination-bullet-active {
   width: 15px;
   border-radius: 5px;
+}
+
+@media (max-width: 992px) {
+  [src="img/message-ilustriator.png"] {
+    display: none !important;
+  }
+}
+
+.com-body-scroll-bottom-min::-webkit-scrollbar {
+  height: 2px;
+}
+
+.com-body-scroll-bottom-min::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
 *, ::before, ::after{
@@ -1240,6 +1254,10 @@ select{
   bottom: 0px;
 }
 
+.bottom-\[-100px\]{
+  bottom: -100px;
+}
+
 .bottom-\[-5px\]{
   bottom: -5px;
 }
@@ -1300,6 +1318,18 @@ select{
   right: 0.5rem;
 }
 
+.right-3{
+  right: 0.75rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
+.right-\[-100px\]{
+  right: -100px;
+}
+
 .right-\[0\]{
   right: 0;
 }
@@ -1344,12 +1374,12 @@ select{
   top: -100px;
 }
 
-.top-\[-140px\]{
-  top: -140px;
+.top-\[-11px\]{
+  top: -11px;
 }
 
-.top-\[-17px\]{
-  top: -17px;
+.top-\[-140px\]{
+  top: -140px;
 }
 
 .top-\[-5px\]{
@@ -1376,32 +1406,16 @@ select{
   top: calc(100% + 6px);
 }
 
-.bottom-\[-100px\]{
-  bottom: -100px;
-}
-
-.right-3{
-  right: 0.75rem;
-}
-
-.right-4{
-  right: 1rem;
-}
-
-.right-\[-100px\]{
-  right: -100px;
-}
-
-.top-\[-11px\]{
-  top: -11px;
-}
-
 .z-0{
   z-index: 0;
 }
 
 .z-10{
   z-index: 10;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .z-\[-1\]{
@@ -1418,10 +1432,6 @@ select{
 
 .z-\[100\]{
   z-index: 100;
-}
-
-.z-50{
-  z-index: 50;
 }
 
 .order-2{
@@ -1507,6 +1517,11 @@ select{
   margin-bottom: 0px;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-\[10px\]{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -1525,11 +1540,6 @@ select{
 .my-\[4px\]{
   margin-top: 4px;
   margin-bottom: 4px;
-}
-
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .mb-1{
@@ -1796,10 +1806,6 @@ select{
   margin-top: -60px;
 }
 
-.mt-\[-90px\]{
-  margin-top: -90px;
-}
-
 .mt-\[100px\]{
   margin-top: 100px;
 }
@@ -1920,6 +1926,10 @@ select{
   height: 100%;
 }
 
+.h-\[100dvh\]{
+  height: 100dvh;
+}
+
 .h-\[100px\]{
   height: 100px;
 }
@@ -2032,6 +2042,10 @@ select{
   height: 45px;
 }
 
+.h-\[460px\]{
+  height: 460px;
+}
+
 .h-\[48px\]{
   height: 48px;
 }
@@ -2084,6 +2098,10 @@ select{
   height: 72px;
 }
 
+.h-\[73px\]{
+  height: 73px;
+}
+
 .h-\[740px\]{
   height: 740px;
 }
@@ -2092,12 +2110,12 @@ select{
   height: 762px;
 }
 
-.h-\[869px\]{
-  height: 869px;
-}
-
 .h-\[8px\]{
   height: 8px;
+}
+
+.h-\[90px\]{
+  height: 90px;
 }
 
 .h-\[96px\]{
@@ -2116,28 +2134,12 @@ select{
   height: 100%;
 }
 
-.h-\[100dvh\]{
-  height: 100dvh;
-}
-
-.h-\[73px\]{
-  height: 73px;
-}
-
-.h-\[460px\]{
-  height: 460px;
-}
-
-.h-\[90px\]{
-  height: 90px;
+.max-h-80{
+  max-height: 20rem;
 }
 
 .max-h-\[100\%\]{
   max-height: 100%;
-}
-
-.max-h-80{
-  max-height: 20rem;
 }
 
 .min-h-\[420px\]{
@@ -2210,10 +2212,6 @@ select{
 
 .w-\[300px\]{
   width: 300px;
-}
-
-.w-\[320px\]{
-  width: 320px;
 }
 
 .w-\[32px\]{
@@ -2300,6 +2298,10 @@ select{
   width: 100%;
 }
 
+.w-\[74px\]{
+  width: 74px;
+}
+
 .min-w-10{
   min-width: 2.5rem;
 }
@@ -2332,12 +2334,12 @@ select{
   min-width: 24px;
 }
 
-.min-w-\[264px\]{
-  min-width: 264px;
+.min-w-\[250px\]{
+  min-width: 250px;
 }
 
-.min-w-\[320px\]{
-  min-width: 320px;
+.min-w-\[264px\]{
+  min-width: 264px;
 }
 
 .min-w-\[4px\]{
@@ -2480,17 +2482,17 @@ select{
   flex-grow: 1;
 }
 
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-x-\[-50\%\]{
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-y-\[-50\%\]{
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -2682,16 +2684,16 @@ select{
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .self-start{
@@ -2720,6 +2722,10 @@ select{
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
 }
 
 .rounded-\[0_0_16px_16px\]{
@@ -2780,10 +2786,6 @@ select{
 
 .rounded-lg{
   border-radius: 0.5rem;
-}
-
-.rounded-2xl{
-  border-radius: 1rem;
 }
 
 .border{
@@ -3013,8 +3015,16 @@ select{
   background-color: rgb(50 50 50 / 0.3);
 }
 
+.bg-black\/40{
+  background-color: rgb(50 50 50 / 0.4);
+}
+
 .bg-black\/50{
   background-color: rgb(50 50 50 / 0.5);
+}
+
+.bg-black\/60{
+  background-color: rgb(50 50 50 / 0.6);
 }
 
 .bg-blue{
@@ -3037,14 +3047,6 @@ select{
 
 .bg-white\/50{
   background-color: rgb(255 255 255 / 0.5);
-}
-
-.bg-black\/40{
-  background-color: rgb(50 50 50 / 0.4);
-}
-
-.bg-black\/60{
-  background-color: rgb(50 50 50 / 0.6);
 }
 
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
@@ -3267,6 +3269,10 @@ select{
   padding-bottom: 70px;
 }
 
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -3335,6 +3341,14 @@ select{
   padding-left: 50px;
 }
 
+.pr-10{
+  padding-right: 2.5rem;
+}
+
+.pr-2{
+  padding-right: 0.5rem;
+}
+
 .pr-6{
   padding-right: 1.5rem;
 }
@@ -3363,16 +3377,8 @@ select{
   padding-top: 80px;
 }
 
-.pb-10{
-  padding-bottom: 2.5rem;
-}
-
-.pr-10{
-  padding-right: 2.5rem;
-}
-
-.pr-2{
-  padding-right: 0.5rem;
+.pe-4{
+  padding-inline-end: 1rem;
 }
 
 .text-center{
@@ -3777,6 +3783,11 @@ select{
   background-color: rgb(244 244 244 / 0.6);
 }
 
+.hover\:bg-\[\#a7341a\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 52 26 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-\[\#e1e1e1\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(225 225 225 / var(--tw-bg-opacity, 1));
@@ -3786,17 +3797,8 @@ select{
   background-color: rgb(0 159 255 / 0.8);
 }
 
-.hover\:bg-blue\/90:hover{
-  background-color: rgb(0 159 255 / 0.9);
-}
-
 .hover\:bg-white\/80:hover{
   background-color: rgb(255 255 255 / 0.8);
-}
-
-.hover\:bg-\[\#a7341a\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 52 26 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-\[\#fff\]:hover{
@@ -3857,24 +3859,6 @@ select{
   background-color: rgb(0 159 255 / var(--tw-bg-opacity, 1));
 }
 
-@media (max-width: 1700px){
-  .max-\[1700px\]\:flex{
-    display: flex;
-  }
-
-  .max-\[1700px\]\:hidden{
-    display: none;
-  }
-
-  .max-\[1700px\]\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .max-\[1700px\]\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-}
-
 @media (max-width: 1600px){
   .max-\[1600px\]\:flex{
     display: flex;
@@ -3882,10 +3866,6 @@ select{
 
   .max-\[1600px\]\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .max-\[1600px\]\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .max-\[1600px\]\:flex-col{
@@ -3976,10 +3956,6 @@ select{
 
   .max-\[1300px\]\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
-  .max-\[1300px\]\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .max-\[1300px\]\:flex-col{
@@ -4490,12 +4466,6 @@ select{
   }
 }
 
-@media (max-width: 10px){
-  .max-\[10px\]\:col-span-12{
-    grid-column: span 12 / span 12;
-  }
-}
-
 @media (min-width: 350px){
   .min-\[350px\]\:top-\[-180px\]{
     top: -180px;
@@ -4579,20 +4549,20 @@ select{
     padding-right: 100px;
   }
 
-  .sm\:text-\[28px\]{
-    font-size: 28px;
-  }
-
-  .sm\:text-\[32px\]{
-    font-size: 32px;
-  }
-
   .sm\:text-\[18px\]{
     font-size: 18px;
   }
 
   .sm\:text-\[20px\]{
     font-size: 20px;
+  }
+
+  .sm\:text-\[28px\]{
+    font-size: 28px;
+  }
+
+  .sm\:text-\[32px\]{
+    font-size: 32px;
   }
 
   .sm\:text-\[44px\]{
@@ -4629,10 +4599,6 @@ select{
     margin-bottom: 100px;
   }
 
-  .md\:mt-\[70px\]{
-    margin-top: 70px;
-  }
-
   .md\:mb-\[30px\]{
     margin-bottom: 30px;
   }
@@ -4643,6 +4609,10 @@ select{
 
   .md\:mt-\[-75px\]{
     margin-top: -75px;
+  }
+
+  .md\:mt-\[70px\]{
+    margin-top: 70px;
   }
 
   .md\:block{
@@ -4688,6 +4658,10 @@ select{
   .md\:px-\[95px\]{
     padding-left: 95px;
     padding-right: 95px;
+  }
+
+  .md\:text-\[18px\]{
+    font-size: 18px;
   }
 
   .md\:text-\[32px\]{
@@ -4788,18 +4762,6 @@ select{
   .lg\:max-w-\[670px\]{
     max-width: 670px;
   }
-
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1150px){
@@ -4839,10 +4801,6 @@ select{
 }
 
 @media (min-width: 1280px){
-  .xl\:col-span-2{
-    grid-column: span 2 / span 2;
-  }
-
   .xl\:mt-\[-90px\]{
     margin-top: -90px;
   }
