--- a/css/output.css
+++ b/css/output.css
@@ -21,7 +21,7 @@
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: white;
+  background: #ffff;
 }
 
 /* Handle */
@@ -165,7 +165,7 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-  .swiper-button-prev {
+.swiper-button-prev {
     display: none;
   }
 
@@ -319,7 +319,7 @@ input:checked + .slider-v3::after {
   left: 50%;
   bottom: 20px;
   transform: translateX(-50%);
-  background: rgba(232, 232, 232, 0.5019607843);
+  background: #E8E8E880;
   height: 20px;
   width: auto;
   border-radius: 20px;
@@ -1622,10 +1622,6 @@ select{
   margin-bottom: 25px;
 }
 
-.mb-\[300px\]{
-  margin-bottom: 300px;
-}
-
 .mb-\[30px\]{
   margin-bottom: 30px;
 }
@@ -1872,6 +1868,26 @@ select{
 
 .mt-\[auto\]{
   margin-top: auto;
+}
+
+.mb-\[10px\]{
+  margin-bottom: 10px;
+}
+
+.mb-\[2px\]{
+  margin-bottom: 2px;
+}
+
+.mt-\[8px\]{
+  margin-top: 8px;
+}
+
+.ml-\[12px\]{
+  margin-left: 12px;
+}
+
+.mr-\[20px\]{
+  margin-right: 20px;
 }
 
 .block{
@@ -2134,6 +2150,10 @@ select{
   height: 100%;
 }
 
+.h-\[160px\]{
+  height: 160px;
+}
+
 .max-h-80{
   max-height: 20rem;
 }
@@ -2274,6 +2294,10 @@ select{
   width: 70%;
 }
 
+.w-\[74px\]{
+  width: 74px;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
@@ -2296,10 +2320,6 @@ select{
 
 .w-full{
   width: 100%;
-}
-
-.w-\[74px\]{
-  width: 74px;
 }
 
 .min-w-10{
@@ -2472,6 +2492,10 @@ select{
 
 .max-w-md{
   max-width: 28rem;
+}
+
+.max-w-\[760px\]{
+  max-width: 760px;
 }
 
 .flex-1{
@@ -2660,6 +2684,14 @@ select{
   gap: 60px;
 }
 
+.gap-\[10px\]{
+  gap: 10px;
+}
+
+.gap-\[2px\]{
+  gap: 2px;
+}
+
 .gap-x-\[30px\]{
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -2788,6 +2820,10 @@ select{
   border-radius: 0.5rem;
 }
 
+.rounded-\[20px\]{
+  border-radius: 20px;
+}
+
 .border{
   border-width: 1px;
 }
@@ -2881,8 +2917,22 @@ select{
   border-color: rgb(255 255 255 / 0.2);
 }
 
+.border-\[\#6E6E6E\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(110 110 110 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#CF301B\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(207 48 27 / var(--tw-border-opacity, 1));
+}
+
 .border-t-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
   border-top-color: rgba(110,110,110,0.25);
+}
+
+.border-t-\[rgba\(33\2c 33\2c 33\2c 0\.25\)\]{
+  border-top-color: rgba(33,33,33,0.25);
 }
 
 .\!bg-transparent{
@@ -3047,6 +3097,11 @@ select{
 
 .bg-white\/50{
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-\[\#FCE001\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 224 1 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
@@ -3269,12 +3324,18 @@ select{
   padding-bottom: 70px;
 }
 
-.pb-10{
-  padding-bottom: 2.5rem;
+.py-\[20px\]{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.pb-2{
-  padding-bottom: 0.5rem;
+.py-\[12px\]{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .pb-3{
@@ -3307,6 +3368,10 @@ select{
 
 .pe-2{
   padding-inline-end: 0.5rem;
+}
+
+.pe-4{
+  padding-inline-end: 1rem;
 }
 
 .pl-2{
@@ -3377,8 +3442,20 @@ select{
   padding-top: 80px;
 }
 
-.pe-4{
-  padding-inline-end: 1rem;
+.pb-\[24px\]{
+  padding-bottom: 24px;
+}
+
+.pb-\[20px\]{
+  padding-bottom: 20px;
+}
+
+.pt-\[20px\]{
+  padding-top: 20px;
+}
+
+.pt-\[30px\]{
+  padding-top: 30px;
 }
 
 .text-center{
@@ -3538,6 +3615,10 @@ select{
   line-height: 1.25;
 }
 
+.leading-\[8px\]{
+  line-height: 8px;
+}
+
 .tracking-\[-0\.16px\]{
   letter-spacing: -0.16px;
 }
@@ -3634,6 +3715,19 @@ select{
 
 .text-white\/80{
   color: rgb(255 255 255 / 0.8);
+}
+
+.text-\[\#1DBC52\]{
+  --tw-text-opacity: 1;
+  color: rgb(29 188 82 / var(--tw-text-opacity, 1));
+}
+
+.text-\[rgba\(33\2c 33\2c 33\2c 0\.5\)\]{
+  color: rgba(33,33,33,0.5);
+}
+
+.text-\[rgba\(50\2c 50\2c 50\2c 0\.75\)\]{
+  color: rgba(50,50,50,0.75);
 }
 
 .underline{
@@ -3799,6 +3893,11 @@ select{
 
 .hover\:bg-white\/80:hover{
   background-color: rgb(255 255 255 / 0.8);
+}
+
+.hover\:bg-\[\#CF301B\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(207 48 27 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-\[\#fff\]:hover{
@@ -4228,6 +4327,10 @@ select{
     margin-top: 30px;
   }
 
+  .max-\[767px\]\:mr-\[6px\]{
+    margin-right: 6px;
+  }
+
   .max-\[767px\]\:block{
     display: block;
   }
@@ -4258,6 +4361,10 @@ select{
 
   .max-\[767px\]\:w-full{
     width: 100%;
+  }
+
+  .max-\[767px\]\:w-\[30px\]{
+    width: 30px;
   }
 
   .max-\[767px\]\:max-w-\[100\%\]{
@@ -4294,6 +4401,10 @@ select{
 
   .max-\[767px\]\:justify-end{
     justify-content: flex-end;
+  }
+
+  .max-\[767px\]\:justify-center{
+    justify-content: center;
   }
 
   .max-\[767px\]\:gap-\[10px\]{
@@ -4342,6 +4453,10 @@ select{
 
   .max-\[767px\]\:p-\[20px\]{
     padding: 20px;
+  }
+
+  .max-\[767px\]\:p-\[15px\]{
+    padding: 15px;
   }
 
   .max-\[767px\]\:px-\[16px\]{
@@ -4416,6 +4531,14 @@ select{
   .max-\[767px\]\:text-\[32px\]{
     font-size: 32px;
   }
+
+  .max-\[767px\]\:text-\[22px\]{
+    font-size: 22px;
+  }
+
+  .max-\[767px\]\:text-\[14px\]{
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 650px){
@@ -4439,6 +4562,64 @@ select{
 
   .max-\[576px\]\:pr-4{
     padding-right: 1rem;
+  }
+}
+
+@media (max-width: 520px){
+  .max-\[520px\]\:mb-\[20px\]{
+    margin-bottom: 20px;
+  }
+
+  .max-\[520px\]\:mr-\[6px\]{
+    margin-right: 6px;
+  }
+
+  .max-\[520px\]\:h-\[290px\]{
+    height: 290px;
+  }
+
+  .max-\[520px\]\:w-\[30px\]{
+    width: 30px;
+  }
+
+  .max-\[520px\]\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .max-\[520px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[520px\]\:overflow-x-auto{
+    overflow-x: auto;
+  }
+
+  .max-\[520px\]\:p-\[16px\]{
+    padding: 16px;
+  }
+
+  .max-\[520px\]\:text-\[14px\]{
+    font-size: 14px;
+  }
+
+  .max-\[520px\]\:text-\[15px\]{
+    font-size: 15px;
+  }
+
+  .max-\[520px\]\:text-\[18px\]{
+    font-size: 18px;
+  }
+
+  .max-\[520px\]\:text-\[22px\]{
+    font-size: 22px;
+  }
+
+  .max-\[520px\]\:text-\[24px\]{
+    font-size: 24px;
+  }
+
+  .max-\[520px\]\:text-\[25px\]{
+    font-size: 25px;
   }
 }
 
