--- a/css/output.css
+++ b/css/output.css
@@ -1902,6 +1902,10 @@ select{
   margin-top: auto;
 }
 
+.ml-10{
+  margin-left: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -3736,6 +3740,11 @@ select{
 
 .text-white\/80{
   color: rgb(255 255 255 / 0.8);
+}
+
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
 }
 
 .underline{
