--- a/css/output.css
+++ b/css/output.css
@@ -1902,6 +1902,10 @@ select{
   margin-top: auto;
 }
 
+.mt-\[10px\]{
+  margin-top: 10px;
+}
+
 .block{
   display: block;
 }
@@ -2612,6 +2616,10 @@ select{
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-cols-6{
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -2838,6 +2846,10 @@ select{
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .border{
@@ -3072,6 +3084,10 @@ select{
 .bg-\[\#FFFFFF\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[rgba\(0\2c 159\2c 255\2c 0\.2\)\]{
+  background-color: rgba(0,159,255,0.2);
 }
 
 .bg-\[rgba\(207\2c 48\2c 27\2c 0\.10\)\]{
@@ -3345,9 +3361,19 @@ select{
   padding-bottom: 50px;
 }
 
+.py-\[6px\]{
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
 .py-\[70px\]{
   padding-top: 70px;
   padding-bottom: 70px;
+}
+
+.py-\[8px\]{
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .pb-10{
@@ -3553,6 +3579,10 @@ select{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[17px\]{
+  font-size: 17px;
 }
 
 .font-bold{
@@ -3967,6 +3997,11 @@ select{
 .peer:checked ~ .peer-checked\:border-blue{
   --tw-border-opacity: 1;
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:border-\[\#007bff\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 123 255 / var(--tw-border-opacity, 1));
 }
 
 .peer:checked ~ .peer-checked\:bg-\[\#009FFF\]{
@@ -4393,6 +4428,10 @@ select{
 
   .max-\[767px\]\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .max-\[767px\]\:grid-cols-5{
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .max-\[767px\]\:flex-col{
